# Bluefin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  coverage.info  docker-compose.yaml
.github/workflows/: cmake.yml
docs/: README.md  index.html
include/: ast.hpp  astold.hpp  asttest.hpp  asttraverser.hpp  bluefin.hpp  calc.hpp  interpreter.hpp  parser.hpp  printvisitor.hpp  symboltable.hpp  token.hpp
src/: CMakeLists.txt  ast.cpp  astold.cpp  asttest.cpp  bluefin.cpp  calc.cpp  interpreter.cpp  main.cpp  parser.cpp  printvisitor.cpp  symboltable.cpp  token.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp  ParserTest.cpp  SyntaxTest.cpp  Test.hpp  TypeCheckingTest.cpp
utils/: build.sh  configure.sh  format.sh  generate_ast.py  mycalc.py
